# vk_stickers_api

./: .gitignore  LICENSE  README.md  pyproject.toml
vk_stickers_api/: application.py  client.py  config.py  const.py  cron.py  models.py  vk_api.py
vk_stickers_api/routes/: __init__.py  callback.py  sticker.py  users.py
vk_stickers_api/schemas/: callback.py  sticker.py
